--- a/initial/pom.xml
+++ b/initial/pom.xml
@@ -27,7 +27,25 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-
+		<!--JPA (Java Persistence API -->
+		<dependency>
+			<groupId>javax.persistence</groupId>
+			<artifactId>javax.persistence-api</artifactId>
+			<version>2.2</version> <!-- You can adjust the version if needed -->
+		</dependency>
+		<!-- Hibernate JPA Implementation -->
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-core</artifactId>
+			<version>5.5.6.Final</version> <!-- You can adjust the version if needed -->
+		</dependency>
+		<!-- Lombok -->
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.22</version> <!-- You can adjust the version if needed -->
+			<scope>provided</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
